# nanoClaw

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  DEEPAGENTS_FINAL_REPORT.md  DEEPAGENTS_FIXES.md  DEEPAGENTS_MIGRATION_SUMMARY.md  DEEPAGENTS_SUCCESS_REPORT.md  DEEPAGENTS_VERIFICATION.md  Dockerfile  LICENSE  README.md  agents.md  channel-custom.md  config.example.json  eteams_client.py  install.cmd  nanoclaw.spec  pyproject.toml  rcc.txt  rcc_run.txt  test_deepagents_api.py  test_deepagents_complete.py  test_deepagents_integration_simple.py  test_deepagents_invoke.py  test_deepagents_no_responses.py  test_deepagents_with_baseurl.py  test_deepseek_api.py  test_jsonl_functionality.py  test_langfuse.py
.claude/: settings.local.json
docs/: skill-creation-guide.md  skills.md
nanoclaw/: __init__.py  __main__.py
nanoclaw/channels/: __init__.py  console.py  eteams.py  gateway.py  telegram.py
nanoclaw/cli/: main.py
nanoclaw/core/: __init__.py  agent.py  config.py  context.py  jsonl_logger.py  llm.py  logger.py
nanoclaw/cron/: __init__.py  scheduler.py
nanoclaw/dashboard/: __init__.py  index.html  server.py
nanoclaw/deepagents/: __init__.py  memory_adapter.py  safety_wrapper.py  tools_adapter.py
nanoclaw/memory/: __init__.py  store.py
nanoclaw/security/: __init__.py  audit.py  budget.py  doctor.py  prompt_guard.py  sandbox.py
nanoclaw/skills/: __init__.py  github.py  loader.py  news.py  robocorp.py  summarize_url.py  timezones.py  weather.py
nanoclaw/skills/examples/: __init__.py
nanoclaw/skills/examples/file-organizer/: SKILL.md
nanoclaw/skills/examples/file-organizer/scripts/: __init__.py
nanoclaw/skills/examples/simple-task/: SKILL.md
nanoclaw/tools/: __init__.py  files.py  memory_tools.py  registry.py  rpa_tools.py  shell.py  spawn.py  web.py
openspec/: project.md
openspec/changes/add-robocorp-rpa-integration/: design.md  proposal.md  tasks.md
openspec/changes/add-robocorp-rpa-integration/specs/rpa/: spec.md
openspec/changes/enhance-skills-middleware/: design.md  proposal.md  tasks.md
openspec/changes/enhance-skills-middleware/specs/skill-loading/: spec.md
openspec/changes/enhance-skills-middleware/specs/skill-validation/: spec.md
skills/: example_skill.py
tests/: test_agent.py  test_config.py  test_deepagents_integration.py  test_jsonl_logger.py  test_memory.py  test_rpa_tools.py  test_security.py  test_tools.py
