[project]
name = "nanoclaw-ai"
version = "0.0.1"
description = "Easy install, 24/7. Ultra-lightweight secure AI assistant inspired by OpenClaw."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "nanoClaw Team"}]
keywords = ["ai", "agent", "assistant", "telegram", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "python-telegram-bot>=20.0",
    "click>=8.0",
    "pydantic>=2.0",
    "html2text>=2024.2",
    "croniter>=1.3",
    "requests>=2.31",
    "pycryptodome>=3.19",
    "websockets>=12.0",
    "deepagents>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "tavily-python>=0.5.0",
    "langchain-modal>=0.0.2",
    "langchain-community>=0.4.1",
    "pyinstaller>=6.19.0",
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
semantic = ["chromadb>=0.4"]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
nanoclaw = "nanoclaw.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanoclaw*"]
